--- a/newsFeed/res/layout/list_item.xml
+++ b/newsFeed/res/layout/list_item.xml
@@ -2,21 +2,39 @@
     android:id="@+id/card"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
-    
+    android:layout_margin="20dp"
+    android:background="@drawable/drop_shadow"
+    android:orientation="vertical"
+    android:padding="15dp" >
+
     <TextView
         android:id="@+id/title"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"/>
- 
-    <TextView
-        android:id="@+id/category"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"/>
- 
-    <TextView
-        android:id="@+id/pub_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/darker_gray" 
+        android:textSize="16dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <TextView
+            android:id="@+id/category"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/holo_orange_dark"
+            android:layout_weight="0.6"
+            android:textSize="12dp"/>
+
+        <TextView
+            android:id="@+id/pub_date"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/holo_blue_light"
+            android:layout_weight="0.4"
+            android:textSize="12dp"/>
+    </LinearLayout>
 
 </LinearLayout>
